gcc/testsuite/rust.test/fail_compilation/recursive_struct1.rs
struct Foo {
    a: Foo,
    b: bool,
}

fn main() {
    let a = 1;
}
